[package]
name = 'rst'
version = '0.3.0'
authors = ['Philipp A. <flying-sheep@web.de>']
edition = '2018'
description = 'a reStructuredText parser and renderer for the command line'
license = 'MIT OR Apache-2.0'
readme = 'README.md'

documentation = 'https://github.com/flying-sheep/rust-rst#readme'
homepage = 'https://github.com/flying-sheep/rust-rst'
repository = 'https://github.com/flying-sheep/rust-rst'

[dependencies]
rst_renderer = { path = '../renderer', version = '0.3.0' }
rst_parser = { path = '../parser', version = '0.3.0' }

quicli = '0.4'
structopt = { version = '0.3', features = [ "color" ] }
clap = '2.33'
clap-verbosity-flag = "0.3.1"
env_logger = "0.9.0"
log = "0.4.14"
